# photoframe

./: .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.photoframe-orchestrator.prod.yml  docker-compose.photoframe-orchestrator.yml
docs/: featured-photo-integration.md  firmware-photoframe-fw.md  materials-overview.md  orchestrator-api.md  photo-render-experiment.md  workflow-esp-idf-docker.md
docs/plans/: 2026-02-18-firmware-power-jpeg-design.md  2026-02-27-firmware-button-power-design.md  2026-03-03-orchestrator-power-chart-scatter-design.md  2026-03-07-rust-firmware-rewrite-design.md  2026-03-07-rust-firmware-rewrite.md  2026-03-25-ota-ab-rollout-design.md  2026-07-14-photoframe-vnext-design-and-development-plan.md
firmware/photoframe-fw/main/: CMakeLists.txt  config_store.cpp  config_store.h  idf_component.yml  image_client.cpp  image_client.h  jpeg_decoder.cpp  jpeg_decoder.h  main.cpp  orchestrator_client.cpp  orchestrator_client.h  portal_server.cpp  portal_server.h  power_manager.cpp  power_manager.h
firmware/photoframe-rs/crates/firmware-device/: Cargo.toml  build.rs  sdkconfig.defaults
firmware/photoframe-rs/crates/firmware-device/.cargo/: config.toml
firmware/photoframe-rs/crates/firmware-device/src/: button_logic.rs  diag.rs  feedback.rs  jpeg.rs  lib.rs  main.rs  panel.rs  photo_history.rs  portal.rs  power.rs  render_core.rs  runtime_bridge.rs  sdcard.rs  sound.rs  wifi.rs
firmware/photoframe-rs/crates/platform-espidf/: Cargo.toml
firmware/photoframe-rs/crates/platform-espidf/src/: lib.rs
scripts/: build-photoframe-fw.sh  build-photoframe-rs.sh  build-upstream.sh  build-with-y9000.sh  deploy-orchestrator-offline-to-tvs675-lan.sh  deploy-orchestrator-offline-to-tvs675.sh  dump-device-logs.sh  fetch_waveshare_assets.py  flash-host.py  flash-photoframe-rs.sh  idf-docker.sh  monitor-host.sh  release-orchestrator-image.sh  rust-idf-docker.sh  setup-host-tools.sh  sync-waveshare-official.sh  test-flash-photoframe-rs.sh  validate-ota-host.py  watch-photoframe-device.py
(+66 files in other folders)
