idf_component_register(
  SRCS
    "main.cpp"
    "config_store.cpp"
    "portal_server.cpp"
    "image_client.cpp"
    "jpeg_decoder.cpp"
    "orchestrator_client.cpp"
    "power_manager.cpp"
  INCLUDE_DIRS "."
  REQUIRES
    nvs_flash
    esp_wifi
    esp_driver_i2c
    esp_http_client
    esp_http_server
    esp_netif
    esp_new_jpeg
    json
    mbedtls
    lwip
    photopainter_epd
)
