[package]
name = "photoframe-platform-espidf"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
photoframe-app = { path = "../app" }
photoframe-domain = { path = "../domain" }
photoframe-contracts = { path = "../contracts" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"


[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = "0.36"
